# sqlite_cxx

./: .gitmodules  CMakeLists.txt  README.md
3rd/: CMakeLists.txt
doc/: CMakeLists.txt
examples/: CMakeLists.txt  handle_example.cxx  sqlite_example.cxx
inc/sqlite_cxx/detail/: wrapper.hxx
inc/witchcraft/card/: mana.hxx  mana_cost.hxx
inc/witchcraft/player/: mana_pool.hxx
src/: CMakeLists.txt
src/sqlite_cxx/: CMakeLists.txt
src/witchcraft/: CMakeLists.txt
src/witchcraft/card/: mana.cxx  mana_cost.cxx
src/witchcraft/player/: mana_pool.cxx
test/: CMakeLists.txt
test/sqlite_cxx/: CMakeLists.txt
test/witchcraft/: CMakeLists.txt
test/witchcraft/card/: mana_cost_tests.cxx
test/witchcraft/player/: mana_pool_tests.cxx
